
Changes in Version 0.9-44 (in development)

  o Brushing a single data point in a parallel plot now works.

  o Added 'preplot.actions' argument to playwith().

  o Improved demo("clusterApp").

Changes in Version 0.9-43

  o Fixed bug that caused annotations outside the plot area to fail.

Changes in Version 0.9-42

  o Fixed "protection stack overflow" triggered by resizing grid plots.

  o "Full scale" tools now work with Lattice's "free" scales.

  o Page annotations are now inside Lattice's toplevel viewport.

  o Added a Theme menu for Lattice themes (moved out from Style menu).

Changes in Version 0.9-40

  o Split Latticist out into a new package 'latticist'.

  o Handles plots from the 'vcd' package without falling over.

  o Detects pages of a Lattice plot when 'layout' arg is missing.

Changes in Version 0.9-32

  o Select IDs from Table works correctly when columns are sorted.

  o Latticist reorders factor levels again (when reorder = TRUE),
    and variable expressions involving "dat" have been fixed.

Changes in Version 0.9-31

  o Latticist API abstracted into functions latticistParse() and
    latticistCompose(); the function latticist() is purely a GUI.

  o Support for more plots via plotCoords and case.names methods.

  o New tools "Pan" (scroll), "Line", "Rect".

  o "Undo" is now available in more cases, and is part of the API.

  o Changed some click actions and keyboard shortcuts.

  o "Point / line style" dialog box.

  o Labels menu: "Select from table" now implemented.

  o Fixed initial window size.

  o Editing text fields in "Plot Settings" is now detected even
    when <Enter> is not pressed.

  o Fixed occasional freeze-up of latticist.

  o "Set axis labels..." button in Plot Settings (Lattice only).

  o Zoom out applies to x-axis only in "time mode".

Changes in Version 0.9-21

  o Fixed style shortcuts setting region$col palette.

  o Fixed element 'update.action' in tool specification lists.
