@@ -1,3 +1,4 @@
+useDynLib(playwith, do_interrupt)
 
 import(RGtk2)
 import(gWidgets)
